Give the modal dialog a greater z-index (fix #17)

--- a/frontend/app/catharijne.css
+++ b/frontend/app/catharijne.css
@@ -98,7 +98,7 @@ figure.app-location {
     position: fixed;        /* no fixed because of animations */
     bottom: 200px;             /* put on top of form */
     left: calc(50vw - 300px);  /* center on the page */
-    z-index: 1;
+    z-index: 5000;
 }
 
 button.close:after {
